--- a/ITS_demo/templates/Mixed_fraction.html
+++ b/ITS_demo/templates/Mixed_fraction.html
@@ -70,10 +70,26 @@ function check0()
     }
 	 else
 	 {
-	 feedcount++;
-        $(x[0]).hide();
-        $(y[0]).show();
+    if(document.getElementsByTagName("input")[0].value == {{ answer.b0 }}){
+      $(x[0]).hide();
+      $(y[0]).show();
 	    document.getElementsByTagName("input")[0].value = "";
+      swal({
+        title: "Oops, Looks like you divided wrong ",
+        text: "for example, if you divide 9/4 then quotient is 2",
+        icon: "error",
+        button: true,
+        dangerMode: true,
+      })
+      .then((willDelete) => {
+        if (willDelete) {
+          swal("Now try again", {
+            icon: "success",
+          });
+        }
+      });
+
+    }
 	 }
 }
 
@@ -89,24 +105,25 @@ function check1()
     }
 	 else
 	 {
-	 feedcount++;
-	    $(x[1]).hide();
+    if(document.getElementsByTagName("input")[1].value !=""){
+      $(x[1]).hide();
         $(y[1]).show();
 	    document.getElementsByTagName("input")[1].value = "";
 	    swal({
-  title: "Oops, Looks like you divided wrong ",
-  text: "for example, if you divide 9/4 then quotient is 2 and remainder is 9-(4*2) = 1",
-  icon: "error",
-  button: true,
-  dangerMode: true,
-})
-.then((willDelete) => {
-  if (willDelete) {
-    swal("Now try again", {
-      icon: "success",
-    });
-  }
-});
+        title: "Oops, Looks like you divided wrong ",
+        text: "for example, if you divide 9/4 then quotient is 2 and remainder is 9-(4*2) = 1",
+        icon: "error",
+        button: true,
+        dangerMode: true,
+      })
+      .then((willDelete) => {
+        if (willDelete) {
+          swal("Now try again", {
+            icon: "success",
+          });
+        }
+      });
+    }
 	 }
 }
 
@@ -119,25 +136,26 @@ function check2()
 	  }
 	else
 	{
-	feedcount++;
-	    $(x[3]).hide();
+    if(document.getElementsByTagName("input")[3].value != ""){
+      $(x[3]).hide();
         $(y[3]).show();
         document.getElementsByTagName("input")[3].value = "";
         swal({
-  title: "Oops, Looks like you are confused in the format",
-  text: "Whole number in mixed fraction is the quotient you got in the first step",
-  icon: "error",
-  button: true,
-  dangerMode: true,
-})
-.then((willDelete) => {
-  if (willDelete) {
-    swal("Now try again", {
-      icon: "success",
-    });
-  }
-});
+          title: "Oops, Looks like you are confused in the format",
+          text: "Whole number in mixed fraction is the quotient you got in the first step",
+          icon: "error",
+          button: true,
+          dangerMode: true,
+        })
+        .then((willDelete) => {
+          if (willDelete) {
+            swal("Now try again", {
+              icon: "success",
+            });
+          }
+        });
     }
+  }
 }
 
 function check3()
@@ -149,24 +167,26 @@ function check3()
 	}
 	else
 	{
-	feedcount++;
-	    $(x[2]).hide();
-        $(y[2]).show();
+    if(document.getElementsByTagName("input")[2].value != ""){
+      $(x[2]).hide();
+      $(y[2]).show();
 	    document.getElementsByTagName("input")[2].value = "";
 	    swal({
-  title: "Oops, Looks like you are confused in the format",
-  text: "In mixed fraction, numerator is remainder you got in first step",
-  icon: "error",
-  button: true,
-  dangerMode: true,
-})
-.then((willDelete) => {
-  if (willDelete) {
-    swal("Now try again", {
-      icon: "success",
-    });
-  }
-});
+        title: "Oops, Looks like you are confused in the format",
+        text: "In mixed fraction, numerator is remainder you got in first step",
+        icon: "error",
+        button: true,
+        dangerMode: true,
+      })
+      .then((willDelete) => {
+        if (willDelete) {
+          swal("Now try again", {
+            icon: "success",
+          });
+        }
+      });
+
+    }
 	}
 }
 
@@ -194,20 +214,20 @@ function check4()
       $(x[4]).hide();
         $(y[4]).show();
 	    document.getElementsByTagName("input")[4].value = "";
-	    swal({
-  title: "Oops, Looks like you are confused in the format",
-  text: "Denominator in mixed fraction is same as denominator of fraction ",
-  icon: "error",
-  button: true,
-  dangerMode: true,
-})
-.then((willDelete) => {
-  if (willDelete) {
-    swal("Now try again", {
-      icon: "success",
-    });
-  }
-});
+      swal({
+        title: "Oops, Looks like you are confused in the format",
+        text: "Denominator in mixed fraction is same as denominator of fraction ",
+        icon: "error",
+        button: true,
+        dangerMode: true,
+      })
+      .then((willDelete) => {
+        if (willDelete) {
+          swal("Now try again", {
+            icon: "success",
+          });
+        }
+      });
 
     }
 	   
